# platform.upstream.xdpyinfo

./: .cvsignore  .gbs.conf  .gitignore  ChangeLog  Makefile.am  configure.ac  project.config  xdpyinfo.c  xdpyinfo.man
man/: xdpyinfo.man
packaging/: xdpyinfo.changes  xdpyinfo.spec
